2008-01-23  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/level/gstlevel.c:
	Use #include <math.h> instead of #include "math.h".

2008-01-21  Jan Schmidt  <Jan.Schmidt@sun.com>

	* tests/check/Makefile.am:
	Fix up some CFLAGS sets.
	Don't include gconfvideosrc in the states test.

	* tests/check/elements/autodetect.c: (GST_START_TEST):
	Add some error strings to fail_unless arguments to fix some weird
	compiler errors on Solaris.

2008-01-21  Jan Schmidt  <Jan.Schmidt@sun.com>

	* configure.ac:
	Detect video4linux headers on Solaris too.
	* sys/v4l2/gstv4l2colorbalance.h:
	* sys/v4l2/gstv4l2object.h:
	* sys/v4l2/v4l2_calls.c:
	* sys/v4l2/v4l2src_calls.c: (gst_v4l2_buffer_finalize),
	(gst_v4l2_buffer_new):

	Make v4l2 build on Solaris.
	Patch by: Brian Cameron  <brian.cameron at sun dot com>
	Fixes: #510505

2008-01-21  Stefan Kost  <ensonic@users.sf.net>

	* docs/plugins/gst-plugins-good-plugins-docs.sgml:
	  Update list from (still local) scanning script.

2008-01-19  Sebastian Dröge  <slomo@circular-chaos.org>

	Based on a patch by:
	    Victor STINNER <victor dot stinner at haypocalc dot com>

	* gst/wavparse/gstwavparse.c: (gst_wavparse_stream_headers):
	Set variable to NULL after freeing it to prevent double frees
	or make failures by another use of it afterwards more obvious
	and fix use of it after the freeing. Fixes bug #510592.

2008-01-18  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/udp/gstmultiudpsink.c:
	use GST_WARNING for logging

2008-01-18  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/udp/gstmultiudpsink.c:
	Don't try to leave a multicast group with an invalid socket

2008-01-17  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/flac/gstflacdec.c:
	  Fix compilation against flac 1.1.2 (as on debian stable), where
	  the picture metadata defines and structs don't exist yet.
	  Fixes #509301.

2008-01-17  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Olivier Crete <tester at tester dot ca>
